2007-11-21  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.3 (interface age 3).

2007-11-20  Sven Neumann  <sven@gimp.org>

	* Made 2.4.2 release.

2007-11-20  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/widgets/gimpcontainercombobox.c: set the combo insensitive
	when it has no items. Fixes bug #498511.

2007-11-20  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/t-o-p-logo.scm: applied patch from
	Ulf-D. Ehlert that fixes the background color used in the Particle
	Trace filter (bug #498282).

2007-11-19  Tor Lillqvist  <tml@novell.com>

	Merged from trunk:

	* libgimpwidgets/gimpcolorscale.c (gimp_color_scale_render_stipple):
	Don't write past end of buffer (bug #399484).

2007-11-16  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/lut-funcs.c (equalize_lut_setup): make sure we don't
	get stuck in a loop if all pixels are transparent (bug #497291).

2007-11-16  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpconfig/gimpcolorconfig.c: changed default value for using
	the system monitor profile. Many users seem to have broken monitor
	profiles and it's hard to figure out how to fix this (bug #496890).

2007-11-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/screenshot.c: don't call gimp_edit_clear() if
	the selection mask is empty after selecting the window shape and
	inverting that selection. Fixes bug #493182.

2007-11-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/tiff-save.c (save_image): fixed bug in colormap
	handling (bug #497103).

2007-11-13  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpimage-merge.c (gimp_image_merge_layers): when we
	encounter an unsupported merge operation (merging an opaque
	indexed layer onto an indexed layer with alpha channel), then add
	an alpha channel and try again. Fixes bug #496437.

2007-11-13  Sven Neumann  <sven@gimp.org>
