@@ -1,3 +1,11 @@
+2007-11-26  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* plug-ins/common/wmf.c: avoid filename encoding problems by not
+	using wmf_file_open() but mapping the file into memory with
+	GMappedFile. Fixes bug #499329.
+
 2007-11-21  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version to 2.4.3 (interface age 3).
